--- a/Steganography and Cryptography/Encrypt the message/task-info.yaml
+++ b/Steganography and Cryptography/Encrypt the message/task-info.yaml
@@ -237,6 +237,19 @@ files:
 - name: test/testimage.png
   visible: false
   learner_created: false
+- name: src/cryptography/Steganography.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/Picture.kt
+  visible: true
+  learner_created: true
+- name: test/out.png
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/160/stages/833/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Mon, 23 Aug 2021 19:27:16 UTC
 record: -1
